# aituber_prompt_engineering_example

./: .env.template  .gitignore  LICENSE  VoiceMaker.py  aituber_system.py  aituber_system_prompt.txt  daily_event_maker.py  daily_things_maker.py  diary_maker.py  diary_maker_openai.py  hatena_entry_adapter.py  obs_adapter.py  openai_adapter.py  play_sound.py  pyproject.toml  readme.md  talker.py  test_diary_maker_openai.py  test_hatena_get.py  test_hatena_post.py  test_hatena_xml_maker.py  test_post_data.xml  test_tweet.py  test_tweet2.py  tweet_maker.py  tweet_test.py  youtube_comment_adapter.py
storage/: daily_things_make_prompt.txt  diary_maker_prompt.txt  tweet_daily_prompt_001.txt  tweet_theme.txt
storage/daily_things_words/: cram_school.txt  cram_school_to_home.txt  home.txt  home_to_school.txt  school.txt  school_to_cram_school.txt
