[tool.poetry]
name = "aituber-prompt-engineering-example"
version = "0.1.0"
description = ""
authors = ["sr2mg <55787575+sr2mg@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
feedparser = "^6.0.11"
openai = "^1.55.0"
pydantic = "^2.10.1"
obsws-python = "^1.7.0"
sounddevice = "^0.5.1"
tweepy = "^4.14.0"
python-dotenv = "^1.0.1"
pytchat = "^0.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
